# auth-rs

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENCE  README.md  Rocket.toml  TODO.md  build-docker-image-windows.cmd  build-frontend-docker-image-unix.sh  bun.lockb  docker-compose.yml  package-lock.json  package.json  update.sh  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: docker-multi-image.yml
backend/: Cargo.toml  Dockerfile  Rocket.toml  build-backend-docker-image-unix.sh  passkey-documentation.md
backend/src/: db.rs  errors.rs  logging.rs  main.rs  utils.rs
backend/src/auth/: auth.rs  mfa.rs  mod.rs
backend/src/fairings/: request_logger.rs
backend/src/models/: audit_log.rs  http_response.rs  mod.rs  oauth_application.rs  oauth_scope.rs  oauth_token.rs  passkey.rs  registration_token.rs  role.rs  session.rs  settings.rs  setttings.rs  user.rs  user_error.rs
backend/src/routes/: base.rs  mod.rs
backend/src/routes/audit_logs/: get_all.rs  get_by_entity_id.rs  get_by_id.rs  get_by_type.rs  get_by_user_id.rs  mod.rs
backend/src/routes/auth/: login.rs  mfa.rs  mod.rs  passkey.rs  passkeys.rs  register.rs
backend/src/routes/connections/: disconnect.rs  get_by_user_id.rs  mod.rs
backend/src/routes/oauth/: authorize.rs  mod.rs  revoke.rs  token.rs
backend/src/routes/oauth_applications/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs  update.rs
backend/src/routes/passkeys/: delete.rs  get_all.rs  mod.rs  register_finish.rs  register_start.rs  update.rs
backend/src/routes/registration_tokens/: create.rs  delete.rs  get_all.rs  get_by_id.rs  mod.rs  update.rs
backend/src/routes/roles/: create.rs  delete.rs  get_all.rs  get_by_id.rs  update.rs
backend/src/routes/settings/: get.rs  update.rs
backend/src/routes/users/: create.rs  delete.rs  get_all.rs  get_by_id.rs  me.rs  mfa.rs  mod.rs  passkeys.rs  update.rs
backend/src/utils/: mod.rs  parse_uuid.rs  response.rs
src/: app.css  app.html  main.rs
src/auth/: auth.rs
src/lib/: api.ts  auth.ts  dateUtils.ts  passkeyUtils.ts
src/lib/models/: AuditLog.ts  OAuthApplication.ts  OAuthApplicationUpdates.ts  (+12 more)
src/models/: audit_log.rs  mod.rs  oauth_application.rs  oauth_scope.rs  oauth_token.rs  role.rs  user.rs
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte  mod.rs
(+59 files in other folders)
