[package]
name = "auth-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
mongodb = {version = "3.1.0", features = ["sync"]}
pwhash = "1.0.0"
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_db_pools = { version = "0.1.0", features = ["mongodb"] }
serde_json = "1.0.127"
